--- a/src/styles/modules/drawer.scss
+++ b/src/styles/modules/drawer.scss
@@ -7,8 +7,10 @@
   max-width: 100%;
   height: 100%;
   padding: $gutter;
+  background-color: $colorBackground;
   @include transition();
   @include prefixer(transition-delay, 0.3s);
+  
   &.from-left {
     top: 0;
     left: 0;
