--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -100,7 +100,7 @@
   @include flex-flow(row, wrap);
 
   // Row behaviour
-  &.no-wrap { @include flex-wrap(no-wrap); }
+  &.nowrap { @include flex-wrap(nowrap); }
   &.vertical { @include flex-direction(column); }
 
   // Horizontal alignment
