--- a/src/assets/styles/global/media.scss
+++ b/src/assets/styles/global/media.scss
@@ -1,3 +1,7 @@
+/**
+* Styles for responsive-image.liquid and responsive-bg-image.liquid modules
+**/
+
 .responsive-image__wrapper {
   position: relative;
   overflow: hidden;
