--- a/src/assets/styles/global/variables.scss.liquid
+++ b/src/assets/styles/global/variables.scss.liquid
@@ -1,26 +1,37 @@
-// Spacing
+/**
+* Grid setup and spacing
+**/
 $spacing: 10px;
 $gutter: $spacing*5;
+$columns: 12;
 
-// Screen Sizes
+/**
+* Breakpoints & container widths
+**/
 $s: 650px;
 $m: 900px;
 $l: 1250px;
 $xl: 1500px;
 
-// Colors
+/**
+* Colors
+**/
 $colorBrand: {{ settings.color_brand }};
 $colorText: {{ settings.color_text }};
 $colorBackground: {{ settings.color_background }};
 $colorBorder: {{ settings.color_border }};
 $colorAlternate: {{ settings.color_alternate }};
 
-// Borders
+/**
+* Borders
+**/
 $borderWeight: 1px;
 $borderStyle: solid;
 $borderRadius: 2px;
 
-// Typography
+/**
+* Typography
+**/
 $fontBaseSize: 16px;
 $fontBaseLineHeight: 1.5;
 
