--- a/src/assets/styles/sections/product.scss.liquid
+++ b/src/assets/styles/sections/product.scss.liquid
@@ -25,7 +25,7 @@ $inputNumberWidth: $fontBaseSize*3;
     // Hide the 'spinner' in Firefox
     -moz-appearance: textfield;
   }
-  .single-option-selector {
+  select {
     width: 100%;
     margin-bottom: $spacing*2;
   }
