--- a/src/templates/customers/login.liquid
+++ b/src/templates/customers/login.liquid
@@ -1,6 +1,6 @@
 <!-- templates/customers/login.liquid -->
 
-<div class="form-container">
+<div class="form-container narrow">
   <h1>{{ 'customer.login.title' | t }}</h1>
 
   {% form 'customer_login' %}
