--- a/src/templates/customers/register.liquid
+++ b/src/templates/customers/register.liquid
@@ -1,6 +1,6 @@
 <!-- templates/customers/register.liquid -->
 
-<div class="form-container">
+<div class="form-container narrow">
   <h1>{{ 'customer.register.title' | t }}</h1>
 
   {% form 'create_customer' %}
