--- a/src/templates/customers/reset_password.liquid
+++ b/src/templates/customers/reset_password.liquid
@@ -1,6 +1,6 @@
 <!-- templates/customers/reset_password.liquid -->
 
-<div class="form-container">
+<div class="form-container narrow">
   {% form 'reset_customer_password' %}
 
     <h1>{{ 'customer.reset_password.title' | t }}</h1>
