--- a/src/assets/styles/global/typography.scss
+++ b/src/assets/styles/global/typography.scss
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: $fontHeadingFamily;
   font-weight: $fontHeadingWeight;
-  line-height: $fontBaseLineHeight*0.85;
+  line-height: $fontBaseLineHeight;
   margin-bottom: 1rem;
 }
 
