--- a/src/sections/template-product.liquid
+++ b/src/sections/template-product.liquid
@@ -4,6 +4,11 @@
 {%- assign on_sale = false -%}
 {%- assign current_variant = product.selected_or_first_available_variant -%}
 
+{%- assign multiple_variants = false -%}
+{%- unless product.options.size == 1 and product.variants[0].title == 'Default Title' -%}
+  {%- assign multiple_variants = true -%}
+{%- endunless -%}
+
 {%- if current_variant.compare_at_price > current_variant.price -%}
   {%- assign on_sale = true -%}
 {%- endif -%}
@@ -11,6 +16,8 @@
 {%- if current_variant.available -%}
   {%- assign sold_out = false -%}
 {%- endif -%}
+
+{%- assign vendor_enabled = section.settings.vendor_enabled -%}
 
 {%- assign sharing_enabled = section.settings.sharing_enabled -%}
 
@@ -21,7 +28,7 @@
 
   <div class="row">
     <div class="column l6 m6 s12">
-      <div id="ProductPhoto">
+      <div id="productPhoto">
         {% include 'responsive-image' with
           image: product.featured_image,
           max_width: 600,
@@ -30,46 +37,48 @@
       </div>
 
       {% if product.images.size > 1 %}
-        <div id="ProductThumbs" class="row collapse">
+        <ul id="productThumbs" class="row collapse">
           {% for image in product.images %}
-            <div class="column l3 m4 s4">
-              {% include 'responsive-image' with
-                image: image,
-                max_width: 200,
-                max_height: 300
-              %}
-            </div>
+            <li class="column l3 m4 s4">
+              <a href="{{ image.src | img_url: '1500x' }}">
+                {% include 'responsive-bg-image' with
+                  image: image,
+                  ratio: 1.0
+                %}
+              </a>
+            </li>
           {% endfor %}
-        </div>
+        </ul>
       {% endif %}
     </div>
 
     <div class="column l6 m6 s12">
       <h1>{{ product.title }}</h1>
 
+      {% if vendor_enabled and product.vendor != blank %}
+        <p>{{ product.vendor }}</p>
+      {% endif %}
+
       {%- comment -%}
         Product pricing
       {%- endcomment -%}
       <p class="margin-bottom-2x">
-        <span class="visually-hidden">
-          {{ 'product.regular_price' | t }}
-        </span>
         <span id="ProductPrice" class="h3">
           {{ current_variant.price | money }}
         </span>
-        {% if on_sale %}
-          <span id="OnSale">
-            <span class="hidden">
-              {{ 'product.original_price' | t }}
-            </span>
-            <span>
-              {{ 'product.original_price' | t }}
-            </span>
-            <s id="ComparePrice">
-              {{ product.compare_at_price | money }}
-            </s>
-          </span>
-        {% endif %}
+
+        {%- comment -%}
+          This element should exist, but hidden, even if the default product
+          is not on sale. Showing or hiding on variant change should be
+          handled with Javascript.
+        {%- endcomment -%}
+        <s id="comparePrice"
+           class="h3{% unless on_sale %} hidden{% endunless %}">
+           <span class="visually-hidden">
+             {{ 'product.regular_price' | t }}
+           </span>
+          {{ current_variant.compare_at_price | money }}
+        </s>
       </p>
 
       <form action="/cart/add"
@@ -78,15 +87,19 @@
             id="AddToCartForm"
             data-cart-submit>
 
-        {% unless product.options.size == 1 and product.variants[0].title == 'Default Title' %}
-          {% for option in product.options_with_values %}
-            <label {% if option.name == 'default' %}class="hidden"{% endif %}
-                   for="SingleOptionSelector-{{ forloop.index }}">
-              {{ option.name }}
-            </label>
-            <div class="select-wrapper">
-              <select class="single-option-selector"
-                      id="SingleOptionSelector-{{ forloop.index }}"
+        {%- comment -%}
+          This variant loop creates a dropdown selector for each option set
+          Javascript is required to pass the selected product ID to the cart
+          This will be hidden in browsers where Javascript is not supported
+        {%- endcomment -%}
+        {% if multiple_variants %}
+          <div class="js">
+            {% for option in product.options_with_values %}
+              <label {% if option.name == 'default' %}class="hidden"{% endif %}
+                     for="singleOptionSelector-{{ forloop.index }}">
+                {{ option.name }}
+              </label>
+              <select id="singleOptionSelector-{{ forloop.index }}"
                       data-index="option{{ forloop.index }}">
                 {% for value in option.values %}
                   <option value="{{ value | escape }}"
@@ -95,42 +108,37 @@
                   </option>
                 {% endfor %}
               </select>
-            </div>
-          {% endfor %}
-        {% endunless %}
+            {% endfor %}
+          </div>
+        {% endif %}
 
         {%- comment -%}
-          Original variant selector
+          Original variant selector with fallback for no Javascript
           The customer will not see this element
-          TBC - Do we actually need a second selector?????
         {%- endcomment -%}
-        <div class="hidden">
-          <div class="select-wrapper">
-            <select name="id"
-                    id="productSelect"
-                    data-index="option{{ forloop.index }}">
-              {% for variant in product.variants %}
-                {% if variant.available %}
-                  <option
-                    value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money_with_currency }}
-                  </option>
-                {% else %}
-                  <option disabled="disabled">
-                    {{ variant.title }} - {{ 'product.sold_out' | t }}
-                  </option>
-                {% endif %}
-              {% endfor %}
-            </select>
-          </div>
-        </div>
+        <noscript>
+          <select name="id">
+            {% for variant in product.variants %}
+              {% if variant.available %}
+                <option
+                  value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money_with_currency }}
+                </option>
+              {% else %}
+                <option disabled="disabled">
+                  {{ variant.title }} - {{ 'product.sold_out' | t }}
+                </option>
+              {% endif %}
+            {% endfor %}
+          </select>
+        </noscript>
 
         <label for="Quantity" class="visually-hidden">
           {{ 'product.quantity' | t }}
         </label>
         <div class="quantity-adjust inline margin-right-1x">
-          <a class="adjust" data-change="-1">&#8211;</a>
+          <a class="js adjust" data-change="-1">&#8211;</a>
           <input type="number" id="Quantity" class="quantity" name="quantity" value="1" min="1" data-cart-quantity="1">
-          <a class="adjust" data-change="1">&#43;</a>
+          <a class="js adjust" data-change="1">&#43;</a>
         </div>
 
         {% if sold_out %}
@@ -179,6 +187,11 @@
   {
     "name": "Product pages",
     "settings": [
+      {
+        "type": "checkbox",
+        "id": "vendor_enabled",
+        "label": "Show vendor"
+      },
       {
         "type": "checkbox",
         "id": "sharing_enabled",
