--- a/src/snippets/blog-article.liquid
+++ b/src/snippets/blog-article.liquid
@@ -1,49 +1,57 @@
-<!-- /snippets/blog-article.liquid -->
-
-<!-- TO DO -->
+<!-- snippets/blog-article.liquid -->
 
 {%- assign column_width = column_width | default: 'column l4 m6 s12' -%}
+{%- capture author -%}<b>{{ article.author }}</b>{%- endcapture -%}
+{%- capture date -%}<time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%A, %-d %B, %Y' }}</time>{%- endcapture -%}
 
-<article class="blog-article {{ column_width }}">
-
-  <h2>
-    <a href="{{ article.url }}">
-      {{ article.title }}
-    </a>
-  </h2>
-
-  {% if article.image %}
-    <a href="{{ article.url }}">
-      <img srcset="{{ article.image | img_url: '512x512', scale: 2 }} 2x" src="{{ article.image | img_url: '512x512' }}" alt="{{ article.title | escape }}">
-    </a>
-  {% endif %}
+<article class="{{ column_width }}">
+  {%- comment -%}
+    Due to accessibility requirements, we are regrouping all logical elements into the <a> element.
+    If a screen reader user is tabbing through the page, or browsing by links on the page with duplicated links,
+    they will appear identical which may lead to a confusing user experience.
+  {%- endcomment -%}
+  <a href="{{ article.url }}" class="block">
+    {%- if article.image -%}
+      {% include 'responsive-image' with
+        image: article.image,
+        max_width: 550,
+        max_height: 550
+      %}
+    {%- endif -%}
+    <h2>{{ article.title }}</h2>
+  </a>
 
   <div class="rte">
-    {% if article.excerpt.size > 0 %}
+    {%- if article.excerpt.size > 0 -%}
       {{ article.excerpt }}
-    {% else %}
-      <p>{{ article.content | strip_html | truncatewords: 50 }}</p>
-    {% endif %}
+    {%- else -%}
+      <p>{{ article.content | strip_html | truncatewords: 30 }}</p>
+    {%- endif -%}
   </div>
 
   <p>
     <a href="{{ article.url }}">{{ 'blog.article.read_more' | t }}</a>
   </p>
 
-  {%- capture author -%}<b>{{ article.author }}</b>{%- endcapture -%}
-  {%- capture date -%}<time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%A, %-d %B, %Y' }}</time>{%- endcapture -%}
-
-  <p>{{ 'blog.article.author_on_date_html' | t: author: author, date: date }}
-    {% if article.tags.size > 0 %}
-      <br>
-      <span>{{ 'common.tags' | t }}:</span>
-      {% for tag in article.tags %}
-        <a href="{{ blog.url }}/tagged/{{ tag | handle }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-      {% endfor %}
-    {% endif %}
-    {% if blog.comments_enabled? %}
-      <br>
-      <a href="{{ article.url }}#comments">{{ 'blog.comments.with_count' | t: count: article.comments_count }}</a>
-    {% endif %}
+  <p>
+    {{ 'blog.article.author_on_date_html' | t: author: author, date: date }}
   </p>
+
+  {%- if article.tags.size > 0 -%}
+    <p>
+      {{ 'blog.article.tags' | t }}:
+      {% for tag in article.tags %}
+        <a href="{{ blog.url }}/tagged/{{ tag | handle }}">{{ tag }}</a>
+        {%- unless forloop.last -%}, {%- endunless -%}
+      {%- endfor -%}
+    </p>
+  {%- endif -%}
+
+  {%- if blog.comments_enabled? -%}
+    <p>
+      <a href="{{ article.url }}#comments">
+        {{ 'blog.comments.with_count' | t: count: article.comments_count }}
+      </a>
+    </p>
+  {%- endif -%}
 </article>
