Updated flex layout, popups & drawers

--- a/src/styles/global/helpers.scss
+++ b/src/styles/global/helpers.scss
@@ -88,6 +88,9 @@
     display: inline-block;
   }
 }
+.flex {
+  @include flex();
+}
 
 // Positioning
 .relative {
@@ -112,6 +115,7 @@
 
 // Breakpoint Specific
 @include xl() {
+  .xl-flex { @include flex(); }
   .xl-hide { display: none !important; }
   .xl-left { text-align: left; }
   .xl-center { text-align: center; }
@@ -123,6 +127,7 @@
   .l-show, .m-show, .s-show { display: none !important; }
 }
 @include l() {
+  .l-flex { @include flex(); }
   .l-hide { display: none !important; }
   .l-left { text-align: left; }
   .l-center { text-align: center; }
@@ -134,6 +139,7 @@
   .xl-show, .m-show, .s-show { display: none !important; }
 }
 @include m() {
+  .m-flex { @include flex(); }
   .m-hide { display: none !important; }
   .m-left { text-align: left; }
   .m-center { text-align: center; }
@@ -145,6 +151,7 @@
   .xl-show, .l-show, .s-show { display: none !important; }
 }
 @include s() {
+  .s-flex { @include flex(); }
   .s-hide { display: none !important; }
   .s-left { text-align: left; }
   .s-center { text-align: center; }
