Gift card pages, QR code support

--- a/src/assets/styles/global/grid50.reset.scss
+++ b/src/assets/styles/global/grid50.reset.scss
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section, main {
   display: block;
 }
 body {
+  height: 100%;
   line-height: normal;
 }
 ol, ul {
