--- a/src/assets/styles/templates/gift_card.scss
+++ b/src/assets/styles/templates/gift_card.scss
@@ -22,7 +22,7 @@
   }
 
   .gitcard-image {
-    max-width: 475px;
+    width: 475px;
   }
 
   .gift-card-actions {
@@ -31,7 +31,7 @@
 
   // Code field
   .gift-card-code {
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
   }
 
