--- a/src/sections/theme-header.liquid
+++ b/src/sections/theme-header.liquid
@@ -66,37 +66,11 @@
     {% endif %}
 
     {%- comment -%}
-      Header cart link and item count
-      This href is all on one line to avoid whitespace issues
-
-      The #cartPreview item loop is a simple demo of a non-Ajax cart summary
+      Cart link, total and item count
     {%- endcomment -%}
-    <div id="cartPreview">
-      <a href="/cart" id="CartLink">{{ 'cart.title' | t }} ({{ cart.item_count }} {{ 'cart.item_count' | t: count: cart.item_count }})</a>
-      {% unless cart.item_count == 0 %}
-        <div>
-          {% for item in cart.items %}
-            <div class="clearfix">
-              <a href="{{ item.url }}">
-                {% if item.image != blank %}
-                  <img src="{{ item.image | img_url: '50x80' }}"
-                       srcset="{{ item.image | img_url: '50x80' }} 1x,
-                               {{ item.image | img_url: '50x80', scale: 2 }} 2x"
-                       alt="{{ item.title }}">
-                {% endif %}
-                {{ item.product.title }}
-                <br>
-                {{ item.variant.title }}
-              </a>
-              <br>
-              <small>{{ item.price | money_with_currency }}</small>
-            </div>
-            <hr class="margin-top-1x margin-bottom-1x">
-          {% endfor %}
-          <a href="/cart">{{ 'cart.view_cart' | t }}</a>
-        </div>
-      {% endunless %}
-    </div>
+    <a href="/cart" id="CartLink">
+      {{- 'cart.title' | t }} ({{ cart.item_count }} {{ 'cart.item_count' | t: count: cart.item_count }})
+    </a>
 
     {%- comment -%}
       Header customer account links
